src/style/index.css
/* ... */
.auth-box-title {
    padding: 10px 10px 10px 0;
    font-size: 14px;
    color: var(--font-color);
    border-bottom: 1px solid var(--button_border);
    margin-bottom: 10px;
}

.test-stat {
    color: var(--font-color);
}

.typing_user {
    /*position: absolute;*/
    /*bottom: 94px;*/
    display: flex;
    flex-direction: row;
    /* background: whitesmoke; */
    /*left: 20px;*/
    /*width: 100%;*/
    padding: 3px;
    text-align: center;
    box-sizing: border-box;
    font-size: 9px;
    color: #919496;
}

.typing-text {
    padding-left: 30px;
}

.wrapper-input-old > div > textarea {
    padding: 15px;
    border: 1px solid var(--grey);
    outline: none;
    width: 100%;
    font-size: 16px;
    border-radius: 5px;
    margin: 0;
    box-sizing: border-box;
    resize: none;
    font-family: -apple-system, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Helvetica Neue',
    sans-serif;
}

.wrapper-input > textarea {
    padding: 15px;
    border: 1px solid var(--button_border);
    outline: none;
    width: 100%;
    font-size: 16px;
    border-radius: 5px;
    margin: 0;
    color: var(--font-color);
    box-sizing: border-box;
    background: var(--bg-grey);
    resize: none;
    font-family: -apple-system, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Helvetica Neue',
    sans-serif;
}

.last-message {
    padding: 17px;
    background: #d7e4fc;
    border-radius: 10px;
}

.wrapper-input > div > textarea {
    padding: 15px;
    border: 1px solid var(--grey);
    outline: none;
    width: 100%;
    font-size: 16px;
    border-radius: 5px;
    margin: 0;
    box-sizing: border-box;
    resize: none;
    font-family: -apple-system, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Helvetica Neue',
    sans-serif;
}

.wrapper-white-default {
    padding: 20px;
    background: var(--bg-grey);
    border-radius: 5px;
    box-shadow: var(--view-shadow);
}

.like-item {
    transition: .2s;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2px;
}

.like-text {
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2px;
}

.like-item_footer {
    transition: .2s;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    /*padding: 2px;*/
}

.like-item:active {
    transform: scale(.8);
}

p {
    /* These are technically the same, but use both */
    overflow-wrap: break-word;
    word-wrap: break-word;

    -ms-word-break: break-all;
    /* This is the dangerous one in WebKit, as it breaks things wherever */
    word-break: break-all;
    /* Instead use this non-standard one: */
    word-break: break-word;

    /* Adds a hyphen where the word breaks, if supported (No Blink) */
    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;
    /*white-space: pre;*/
}

.value-post > p {
    white-space: pre-line;
}

.view-flex {
    display: flex;
}

.view-flex-start {
    display: flex;
    width: 100%;
    align-content: flex-start;
}

.view-flex-end {
    display: flex;
    width: 100%;
    align-content: flex-end;
}

.wrapper-maker-message-input > * {
    padding: 15px;
    border: 1px solid var(--grey);
    outline: none;
    width: 100%;
    font-size: 16px;
    border-radius: 5px;
    box-sizing: border-box;
    margin-bottom: 10px;
}

/*.like > .like-item {*/
/*  display: inline-block;*/
/*  padding: 2px;*/
/*  vertical-align: top;*/
/*}*/

.like > .like-item > img {
    max-width: 18px;
}

.like {
    padding: 0 5px;
    /*width: 150px;*/
    display: flex;
    /*justify-content: center;*/
    align-items: center;
    border-radius: 10px;
    height: 26px;
    background: var(--bg-hover);
}

/*.like:hover {*/
/*  */
/*}*/

.not_news {
    padding: 20px;
    text-align: center;
    color: #999999;
}

.wrapper-search {
    top: 80px;
    /*position: fixed;*/
    padding: 20px 20px 0 20px;
    width: 100%;
    box-sizing: border-box;
    /*border-bottom: 1px solid var(--grey);*/
}

.wrapper-feed {
    position: relative;
    box-sizing: border-box;
    height: 100%;
    display: flex;
    flex-direction: column;

    /*padding-left: 245px;*/
}

.chat-flex-row {
    display: flex;
    flex-direction: row;
}

.wrapper-chats {
    /*padding: 20px;*/
}

.messages-control-nav {
    /* border-bottom: 1px solid var(--button_border); */
    background: var(--bg-grey);
    position: absolute;
    width: 100%;
    background: hsla(0, 0%, 100%, .3);
    -webkit-backdrop-filter: blur(8px);
    z-index: 4;
}

.wrapper-maker-message {
    padding: 20px;
    transition: .3s;
}

.maker-message {
    border-radius: 5px;
    background: var(--white);
    box-shadow: 0 0 2px var(--grey);
    padding: 20px;
}

.messages-control-nav-item {
    display: flex;
}

.messages-control-nav-item > * {
    /*display: flex;*/
    /*margin-right: 10px;*/
}

.block-title-chat {
    padding: 8px;
}

.avatar-wrapper {
    padding: 10px;
    display: inline-block;
}

.avatar-wrapper > a > img {
    border-radius: 50%;
    max-width: 40px;
}

.wrapper-content-default {
    position: relative;
    box-sizing: border-box;
    height: 100%;
    display: flex;
    flex-direction: row;
    padding: 20px;
}

.wrapper-chats {
    padding: 0 0 10px 10px;
}


.wrapper-search > div > input {
    padding: 15px;
    background: var(--bg-grey);
    border: 1px solid var(--button_border);
    color: var(--font-color);
    outline: none;
    width: 100%;
    font-size: 16px;
    border-radius: 5px;
    margin: 0;
    box-sizing: border-box;
}


.right-view {
    flex-grow: 2;
}

.frame_footer {
    display: flex;
    flex-direction: row;
}

.nav-sub {
    margin: 0 40px;
    display: flex;
    flex-direction: row;
}

.hover-message-dialog {
    background: var(--hover-message-dialog);
}
/* ... */

